@@ -116,6 +116,11 @@ class TestTotals(object):
         ref = [sum(a.charges) for a in group.atoms.groupby(name).values()]
         assert_almost_equal(group.total_charge(compound=compound), ref)
 
+    @pytest.mark.filterwarnings(  # Prevents regression of issue #2990
+        "error:"
+        "Using a non-tuple sequence for multidimensional indexing is deprecated:"
+        "FutureWarning"
+    )
     def test_total_charge_duplicates(self, group):
         group2 = group + group[0]
         ref = group.total_charge() + group[0].charge
@@ -133,6 +138,11 @@ class TestTotals(object):
         ref = [sum(a.masses) for a in group.atoms.groupby(name).values()]
         assert_almost_equal(group.total_mass(compound=compound), ref)
 
+    @pytest.mark.filterwarnings(  # Prevents regression of issue #2990
+        "error:"
+        "Using a non-tuple sequence for multidimensional indexing is deprecated:"
+        "FutureWarning"
+    )
     def test_total_mass_duplicates(self, group):
         group2 = group + group[0]
         ref = group.total_mass() + group2[0].mass
