@@ -20,6 +20,8 @@ The rules for this file:
   * 2.0.0
 
 Fixes
+  * Avoid using deprecated array indexing in topology attributes
+    (Issue #2990, PR #2991)
   * ParmedParser no longer guesses elements if they are not recognised, instead
     empty strings are assigned (Issue #2933)
   * Instead of using ATOM for both ATOM and HETATM, HETATM record type
